fix: image overflow

--- a/src/assets/description-page.css
+++ b/src/assets/description-page.css
@@ -49,7 +49,6 @@
 
 .toc {
 	padding: 0 0 0 2rem;
-	justify-self: center;
 	position: sticky;
 	top: calc(50% - 18rem);
 	align-self: start;
